--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     restart: always
     ports:
       - 80:80
+    environment:
+      - REACT_APP_API_URL=http://backend:5000
     depends_on:
       - backend
 volumes:
