--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,24 +11,27 @@ services:
       - app-network
 
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+      args: 
+        MONGO_URI:  mongodb://mongo:27017/jeux?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.1.3
+
     container_name: backend
     restart: always
     ports:
       - 5000:5000
-    environment:
-      - MONGODB_URI=mongodb://mongo:27017/games
     depends_on:
       - mongo
     networks:
       - app-network
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      args:
+        REACT_APP_API_URL: http://57.18.238.136:5000
     container_name: frontend
     restart: always
-    environment:
-      - REACT_APP_API_URL=http://macollectionjv.duckdns.org:5000
     ports:
       - 8080:80
     depends_on:
