--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -4,6 +4,9 @@ WORKDIR /app
 
 COPY package*.json ./
 
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+
 RUN npm install
 
 COPY . .
